fix image spacing

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -49,7 +49,7 @@ a.Navigation__link:focus {
   display: flex;
   align-items: center;
 }
-.Navigation__homeIcon > img {
+.Navigation__homeIcon > img:last-child {
   width: 60px;
   margin-left: 8px;
 }
